# TubeAtlas

./: .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.fast  Dockerfile.optimized  PRD.md  README.md  advanced_rag_techniques.md  docker-compose.override.yml  docker-compose.yml  get_yt_transcripts.py  kg-builder.py  mypy.ini  pyproject.toml  pytest.ini  query_transcript_db.py
.cursor/: README.md  mcp.json.example
.cursor/rules/: git-commit-message-rule.mdc  pandas-df-display-rule.mdc  task-documentation.mdc
.github/: README.md
.github/workflows/: ci.yml  fast-ci.yml
.taskmaster/: state.json
.taskmaster/reports/: complexity-report.json  task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
data/: AndrejKarpathy.db  bryanjohnson.db  starterstory.db
data/raw/: test_video.json  video0.json  video1.json  video2.json
docs/: README.md
docs/source/: conf.py  index.rst
docs/task-reports/: README.md  ci-cd-docker-build-optimization.md  ci-cd-pipeline-fixes.md  ci-cd-pipeline-performance-optimization.md  ci-cd-pipeline-test-fixes.md  ci-cd-security-scan-fixes.md  implementation-plan-triple-merging-plan.md  task-1.1-bootstrap-poetry-project.md  task-1.2-scaffold-project-structure.md  task-1.3-code-quality-tooling.md  task-1.4-dockerize-application-compose.md  task-1.5-ci-cd-pipeline.md  task-2.1-configure-async-sqlite-engine.md  task-2.2-define-declarative-base-create-all.md  task-2.3-implement-orm-models-columns-indexes.md  task-2.4-build-repository-layer-crud-operations.md  task-2.5-healthcheck-middleware-startup-hooks.md  task-3.1-youtube-api-client-pagination.md  task-3.2-fetch-channel-videos-generator.md  task-3.3-transcript-service.md  task-3.4-token-counting.md  task-3.5-persist-video-transcript.md  task-3.7-celery-task-shells.md  task-3.8-persist-raw-json-responses.md  task-4.1-package-structure-scaffolding.md  task-4.1-token-counter-refactoring.md  task-5.2-transcript-chunking-iterator-interface.md  task-5.3-graph-extraction-prompter.md
legacy/: API_DOCUMENTATION.md  KG_VISUALIZATION_README.md  api_server.py  kg_visualization.html  package-lock.json  requirements.txt  run_kg_generation.py
legacy/data/: bryanjohnson_insights.txt  complete_kg_langchain_bryanjohnson.json  complete_kg_visualization_langchain_bryanjohnson.html  example_kg.json  example_kg_langchain.json  example_kg_langchain_bryanjohnson.json  kg_visualization.html  kg_visualization_claude.html  kg_visualization_langchain.html  kg_visualization_langchain_bryanjohnson.html
legacy/frontend/: README.md  package-lock.json  package.json
legacy/tests/: __init__.py  test_query.py  test_transcripts.py
legacy/tubeatlas/: api.py  gather_insights.py  kg_builder.py  kg_builder_langchain.py  kg_builder_openai.py  kg_visualizer.py  query.py  transcripts.py
src/tubeatlas/: __init__.py  celery_app.py  main.py  tasks.py
tests/: test_basic.py  test_database.py  test_health_checks.py  test_models.py  test_query.py  test_repositories.py  test_transcripts.py
tests/kg/: test_triple_merger.py
tests/unit/: test_chunkers.py  test_embeddings.py  test_graph_prompter.py  test_persistence.py  test_retry.py  (+7 more)
tubeatlas/: gather_insights.py  kg_builder.py  kg_builder_langchain.py  kg_visualizer.py  query.py  transcripts.py
(+70 files in other folders)
